# AndroidPQZKesim

./: README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/pqzkesim/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  pq_zk_esim.c
app/src/main/cpp/algebra/: pq_zk_poly.c
app/src/main/cpp/crypto/: pq-zk-crypto.c
app/src/main/cpp/include/: pq_zk_esim.h  pqzk_merkle.h
app/src/main/cpp/include/openssl/: opensslconf.h
app/src/main/cpp/include/oqs/: oqsconfig.h
app/src/main/cpp/internal/: params.h  pqzk_internal.h
app/src/main/cpp/platform/: pq_zk_nvram.c
app/src/main/cpp/tee/: pqzk_merkle.c
app/src/main/java/com/yourcompany/pqzkesim/: CryptoUtils.kt  DevTestActivity.kt  MainActivity.kt  NativeLib.kt  PqcNetworkClient.kt  ProtocolConstants.kt  R.kt  RegisterActivity.kt  SplashActivity.kt
app/src/main/res/drawable/: btn_primary_gradient.xml  custom_progress_bar.xml  face_scan_frame.xml
app/src/main/res/layout/: activity_dev_test.xml  activity_main.xml  activity_register.xml  activity_splash.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/pqzkesim/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
